# ghpr

./: CLAUDE.md  PYPI_SETUP.md  README.md  ghpr.py  pyproject.toml
.github/workflows/: release.yml
shell/: ghpr.bash  ghpr.fish
specs/done/: auto-init-nested-tracking-on-create.md  configurable-new-path.md  drafts-subdir.md  threaded-review-comments.md
src/ghpr/: api.py  cli.py  comments.py  config.py  files.py  gist.py  patterns.py  render.py  reviews.py
src/ghpr/commands/: clone.py  create.py  diff.py  ingest_attachments.py  open.py  pull.py  push.py  review.py  shell_integration.py  show.py  upload.py
src/ghpr/shell/: ghpr.bash  ghpr.fish
tests/: test_clone.py  test_clone_e2e.py  test_comments.py  test_completion.py  test_create.py  test_detect_pr.py  test_files.py  test_gist.py  test_import.py  test_ownership.py  test_patterns.py  test_render.py  test_reviews.py
